initial version with graph UI